{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 15,
  "lineage": "1e20903d-c4a4-68ba-a01c-c6226bd2cd9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "usinsa_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:internet-gateway/igw-05d79832f6c9662fe",
            "id": "igw-05d79832f6c9662fe",
            "owner_id": "004932907894",
            "tags": {
              "Name": "usinsa-igw"
            },
            "tags_all": {
              "Name": "usinsa-igw"
            },
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "usinsa_private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:route-table/rtb-0feea354cb73ba0bd",
            "id": "rtb-0feea354cb73ba0bd",
            "owner_id": "004932907894",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "usinsa-private-rt1"
            },
            "tags_all": {
              "Name": "usinsa-private-rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "usinsa_private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:route-table/rtb-0db405a0d18bfe259",
            "id": "rtb-0db405a0d18bfe259",
            "owner_id": "004932907894",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "usinsa-private-rt2"
            },
            "tags_all": {
              "Name": "usinsa-private-rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "usinsa_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:route-table/rtb-09776625bcf6ddd0c",
            "id": "rtb-09776625bcf6ddd0c",
            "owner_id": "004932907894",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d79832f6c9662fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "usinsa-public-rt"
            },
            "tags_all": {
              "Name": "usinsa-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.usinsa_igw",
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cc1f1a40964f0d5",
            "route_table_id": "rtb-0feea354cb73ba0bd",
            "subnet_id": "subnet-0e2319f6cf4ac049b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.usinsa_private_rt1",
            "aws_subnet.usinsa_private_2a",
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027f4d2f9a228a9b1",
            "route_table_id": "rtb-0db405a0d18bfe259",
            "subnet_id": "subnet-053c2baca72350359"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.usinsa_private_rt2",
            "aws_subnet.usinsa_private_2b",
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4d4efc792f64138",
            "route_table_id": "rtb-09776625bcf6ddd0c",
            "subnet_id": "subnet-01ac218b7c9399483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.usinsa_igw",
            "aws_route_table.usinsa_public_rt",
            "aws_subnet.usinsa_public_2a",
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e729bf03285aef01",
            "route_table_id": "rtb-09776625bcf6ddd0c",
            "subnet_id": "subnet-08cb28a6399e863bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.usinsa_igw",
            "aws_route_table.usinsa_public_rt",
            "aws_subnet.usinsa_public_2b",
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "usinsa_private_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:subnet/subnet-0e2319f6cf4ac049b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2319f6cf4ac049b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004932907894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "usinsa-private-2a"
            },
            "tags_all": {
              "Name": "usinsa-private-2a"
            },
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "usinsa_private_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:subnet/subnet-053c2baca72350359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053c2baca72350359",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004932907894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "usinsa-private-2b"
            },
            "tags_all": {
              "Name": "usinsa-private-2b"
            },
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "usinsa_public_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:subnet/subnet-01ac218b7c9399483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ac218b7c9399483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004932907894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "usinsa-public-2a"
            },
            "tags_all": {
              "Name": "usinsa-public-2a"
            },
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "usinsa_public_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:subnet/subnet-08cb28a6399e863bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cb28a6399e863bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004932907894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "usinsa-public-2b"
            },
            "tags_all": {
              "Name": "usinsa-public-2b"
            },
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.usinsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "usinsa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:vpc/vpc-0168a89e19241e267",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09b6990fbc00638fd",
            "default_route_table_id": "rtb-096599a83406b4de5",
            "default_security_group_id": "sg-077b071447d2c9313",
            "dhcp_options_id": "dopt-00dcccbef824a2ec1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0168a89e19241e267",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096599a83406b4de5",
            "owner_id": "004932907894",
            "tags": {
              "Name": "usinsa"
            },
            "tags_all": {
              "Name": "usinsa"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "usinsa_s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:004932907894:vpc-endpoint/vpce-03117a14e71d2c554",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03117a14e71d2c554",
            "ip_address_type": "ipv4",
            "owner_id": "004932907894",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-09776625bcf6ddd0c",
              "rtb-0db405a0d18bfe259",
              "rtb-0feea354cb73ba0bd"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "service_region": "ap-northeast-2",
            "state": "available",
            "tags": {
              "Name": "usinsa-endpoint"
            },
            "tags_all": {
              "Name": "usinsa-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0168a89e19241e267"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.usinsa_igw",
            "aws_route_table.usinsa_private_rt1",
            "aws_route_table.usinsa_private_rt2",
            "aws_route_table.usinsa_public_rt",
            "aws_vpc.usinsa"
          ]
        }
      ]
    }
  ]
}